# envfetch

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  release.yml  test-install.yml
assets/: .env.example  README.md  envfetch.tape
src/: cli.rs  commands.rs  env_ops.rs  interactive.rs  main.rs  models.rs  utils.rs  variables.rs
src/interactive/: draw.rs
tests/: cli.rs
