[package]
name = "envfetch"
version = "1.0.1"
edition = "2021"
authors = ["ANKDDEV"]
description = "Lightweight cross-platform CLI tool for working with environment variables"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ankddev/envfetch"
repository = "https://github.com/ankddev/envfetch"

[dependencies]
# Parsing command line options
clap = { version = "4.5.23", features = ["derive"] }
# Printing colored text
colored = "2.1.0"
# Checking similarity of strings
similar-string = "1.4.3"
# Running external proccesses
subprocess = "0.2.9"
# Parsing dotenv-style files
dotenv-parser = "0.1.3"
# Working with Windows registry
winreg = "0.52"
# Windows API
winapi = { version = "0.3.7", features = ["winuser"] }
# Getting path to shell
which = "6.0"
# Working with home directory
dirs = "5.0"

[dev-dependencies]
# Asserting CLI programs
assert_cmd = "2.0.16"
# Asserting predicates
predicates = "3.1.2"
# Asserting file system
assert_fs = "1.1.2"
