[package]
name = "envfetch"
version = "1.0.1"
edition = "2021"
authors = ["ANKDDEV"]
description = "Lightweight cross-platform CLI tool for working with environment variables"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ankddev/envfetch"
repository = "https://github.com/ankddev/envfetch"

[dependencies]
# CLI arguments parsing
clap = { version = "4.5.23", features = ["derive"] }
# Colored output
colored = "2.1.0"
# String similarity check
similar-string = "1.4.3"
# Process execution
subprocess = "0.2.9"
# .env file parsing
dotenv-parser = "0.1.3"
# Shell detection
which = "6.0"
# Home directory operations
dirs = "5.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# Windows registry operations
winreg = "0.52"
# Windows API
winapi = { version = "0.3.7", features = ["winuser"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.2"
